# optim_gemm

./: CMakeLists.txt  README.md  sgemm.cu
